<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddTask">

    <TextView
        android:id="@+id/addTaskTextView"
        android:layout_width="177dp"
        android:layout_height="49dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="148dp"
        android:text="Add Task"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="118dp" />

    <EditText
        android:id="@+id/taskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="134dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="Task Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="206dp" />

    <EditText
        android:id="@+id/taskBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="114dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="Task Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitle"
        android:autofillHints="" />

    <Button
        android:id="@+id/submitNewTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="48dp"
        android:text="ADD TASK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/addTaskSpinner"
        android:layout_width="233dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskBody"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/teamSpinner"
        android:layout_width="233dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="87dp"
        app:layout_constraintBottom_toTopOf="@+id/submitNewTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskSpinner"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="229dp"
        android:layout_marginBottom="82dp"
        android:text="Add Image"
        app:layout_constraintBottom_toTopOf="@+id/submitNewTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>