...
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainPageRecycleView"
        android:layout_width="222dp"
        android:layout_height="207dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="94dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainPageHeader" />

    <Button
        android:id="@+id/addTaskNavButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="248dp"
        android:text="ADD TASK"
...
