<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".fragments.MainActivityFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/mainActivityRecyclerViewFragment"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/hello_blank_fragment"
        android:textSize="20sp" />

</FrameLayout>