...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TaskDetailActivity">

    <TextView
        android:id="@+id/taskDetailHeader"
        android:layout_width="175dp"
        android:layout_height="38dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="148dp"
        android:text="placeholder"
...
